<resources>
    <string name="app_name">القاموس النفسي</string>
    <string name="tab_text_1">مصطلحات</string>
    <string name="tab_text_2">اختبارات</string>
    <string name="personality_test_lable">اعرف شخصيتك</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
</resources>
